samples/_failures_safe/1761718509_d654ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc3755aa.c: In function ‘main’:
./samples/SAFE/__tmp_cc3755aa.c:151:5: error: expected expression at end of input
  151 |     if (scanf("%d", &start_node) != 1 || start_node < 0 || start_node >=
      |     ^~
./samples/SAFE/__tmp_cc3755aa.c:151:5: error: expected declaration or statement at end of input
